tests/fixtures/invalid/str_gt_bytes.py
# Cannot compare with > Str and Bytes
x: bool = "hello" > b"hello"
